updated ags and hypr stuff

--- a/Linux/hypr/hyprland.conf
+++ b/Linux/hypr/hyprland.conf
@@ -9,8 +9,14 @@ source = ~/.config/hypr/startup.conf
 env = XCURSOR_SIZE,48 
 env = HYPRCURSOR_SIZE,48
 
+plugin {
+    hyprsplit {
+            num_workspaces = 9 
+        }
+}
+
 workspace = special:scratchpad, on-created-empty:uwsm app -- ghostty 
-workspace = special:calculator, on-created-empty:uwsm app -- ghostty --class=com.example.calculator -e python 
+workspace = special:calculator, on-created-empty:uwsm app -- xdg-terminal-exec --app-id=com.example.calculator -- qalc 
 workspace = special:processes, on-created-empty:uwsm app -- ghostty -e btop
 
 
