--- a/Linux/hypr/input.conf
+++ b/Linux/hypr/input.conf
@@ -1,12 +1,13 @@
-
-$terminal = ghostty 
+$terminal = env GTK_IM_MODULE=simple ghostty
 $fileManager = nautilus 
 $menu = tofi-drun | xargs uwsm app --
+
+# $menu = tofi-drun --drun-launch=true
 $browser = uwsm app zen-browser 
 
 
 input {
-    kb_layout = fi 
+    kb_layout = fi,us 
     kb_variant =
     kb_model =
     kb_options =
@@ -40,6 +41,7 @@ bind = $mainMod, M, fullscreen,0
 bind = $mainMod, S, split:swapactiveworkspaces, current +1
 bind = ,Print, exec, ~/.local/bin/screenshot.sh
 bind = $mainMod, G, exec, ags toggle access
+bind = $mainMod, I, exec, hyprctl switchxkblayout all next
 
 bind = $mainMod, minus, togglespecialworkspace, scratchpad
 bind = $mainMod, R, togglespecialworkspace, processes 
