--- a/Linux/hypr/theme.conf
+++ b/Linux/hypr/theme.conf
@@ -1,5 +1,4 @@
-exec-once= uwsm app -- mpvpaper -o "no-audio loop" DP-1 ~/Videos/background.mp4
-exec-once = uwsm app -- mpvpaper -o "no-audio loop" HDMI-A-2 ~/Videos/background.mp4
+exec-once= uwsm app -- mpvpaper -o "no-audio loop" All ~/Videos/glowing-tree.mp4
 
 decoration {
     rounding = 10
@@ -17,7 +16,7 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
+        size = 3 
         passes = 1
 
         vibrancy = 0.1696
@@ -25,7 +24,7 @@ decoration {
 }
 
 animations {
-    enabled = yes, please :)
+    enabled = yes 
 
 
     bezier = easeOutQuint,0.23,1,0.32,1
