--- a/Linux/hypr/rules.conf
+++ b/Linux/hypr/rules.conf
@@ -8,3 +8,6 @@ windowrule = size 50% 40%,class:com.example.calculator
 windowrule = monitor DP-1, class:^(steam_app_.*)$
 
 windowrule = fullscreen,class:com.gabm.satty
+
+layerrule = blur, gtk4-layer-shell
+layerrule = ignorezero, gtk4-layer-shell
